# cag-app

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: config.py  main.py
app/api/: routes.py
app/services/: cache.py  embedding.py  extract_load.py  retriever.py
app/utils/: helpers.py
frontend/: front.py
